fix: alignment of form fields and fontsize of form labels in contact page on iphone 6 landscape media query

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -843,6 +843,7 @@ input[type=reset]{
 
 
 }
+
  /* iphone 6,7,8 Landscape */
 
  @media only screen
@@ -1047,24 +1048,33 @@ input[type=reset]{
   }
   input[type=submit]{
     margin-left: 60px !important;
-    font-size: 40% !important;
-  }
-
-  input[type=reset]{
-    
-    font-size: 40% !important;
+    font-size: 20% !important;
   }
 
   .pos-bookingform h3 {
     text-transform: uppercase;
     font-size: 90% !important;
     margin-bottom: 5px !important;
+    margin-top: 5px !important;
   }
-  form {
-    font-size: 70%;
+  form label {
+    font-size: 70% !important;
+    margin-top: 0px !important;
     margin-bottom: 0px !important;
     padding-bottom: 0px !important;
+    height: 10px !important;
   }
+
+  .form_fullname{
+    height: 50px;
+  }
+  .form_email{
+    height: 50px;
+  }
+  .form_date{
+    height: 50px;
+  }
+
 
 
   .basepic img {
